# manaql-mcp

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/cards/: mcp.rs  mod.rs  model.rs  repository.rs  service.rs
src/mcp/: server.rs
